Added JS event.listener and buttons in html

--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="script.js"></script>
     <title>API</title>
 </head>
 <body>
-    <div class="quoteBox">
-    </div>
+    <div class="quoteBox"></div>
+    <button class="albumButton" data-album-name="Taylor%20Swift">Taylor Swift</button>
+    <button class="albumButton" data-album-name="Fearless">Fearless</button>
+    <button class="albumButton" data-album-name="Speak%20Now">Speak Now</button>
+    <button class="albumButton" data-album-name="Red">Red</button>
+    <button class="albumButton" data-album-name="1989">1989</button>
+    <button class="albumButton" data-album-name="Reputation">Reputation</button>
+    <button class="albumButton" data-album-name="Lover">Lover</button>
+    <button class="albumButton" data-album-name="Folklore">Folklore</button>
+    <button class="albumButton" data-album-name="Evermore">Evermore</button>
+    <button class="albumButton" data-album-name="Midnights">Midnights</button>
+    <button class="albumButton" data-album-name="The%20Tortured%20Poets%20Department">The Tortured Poets Department</button>
+
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
