Safer .textContent and added images and some css

--- a/index.html
+++ b/index.html
@@ -3,22 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>API</title>
 </head>
 <body>
-    <div class="quoteBox"></div>
-    <button class="albumButton" data-album-name="Taylor%20Swift">Taylor Swift</button>
-    <button class="albumButton" data-album-name="Fearless">Fearless</button>
-    <button class="albumButton" data-album-name="Speak%20Now">Speak Now</button>
-    <button class="albumButton" data-album-name="Red">Red</button>
-    <button class="albumButton" data-album-name="1989">1989</button>
-    <button class="albumButton" data-album-name="Reputation">Reputation</button>
-    <button class="albumButton" data-album-name="Lover">Lover</button>
-    <button class="albumButton" data-album-name="Folklore">Folklore</button>
-    <button class="albumButton" data-album-name="Evermore">Evermore</button>
-    <button class="albumButton" data-album-name="Midnights">Midnights</button>
-    <button class="albumButton" data-album-name="The%20Tortured%20Poets%20Department">The Tortured Poets Department</button>
-
+    <main>
+        <div class="quote-box">
+            <h1>Taylor Swift (Jennie's version)</h1>
+            <h2 class="quote"></h2>
+            <p class="song-title"></p>
+        </div>
+        <div class="album-grid">
+            <button class="album-button" data-album-name="Taylor%20Swift">
+                <img class="album-cover" src="Assets/Debut.jpeg" alt="Taylor Swift debut album cover">
+            </button>
+            <button class="album-button" data-album-name="Fearless">
+                <img class="album-cover" src="Assets/Fearless.jpeg" alt="Fearless album cover">
+            </button>
+            <button class="album-button" data-album-name="Speak%20Now">
+                <img class="album-cover" src="Assets/Speak-Now.jpeg" alt="Speak Now album cover">
+            </button>
+            <button class="album-button" data-album-name="Red">
+                <img class="album-cover" src="Assets/Red.png" alt="Red album cover">
+            </button>
+            <button class="album-button" data-album-name="1989">
+                <img class="album-cover" src="Assets/1989.png" alt="1989 album cover">
+            </button>
+            <button class="album-button" data-album-name="Reputation">
+                <img class="album-cover" src="Assets/Reputation.jpeg" alt="Reputation album cover">
+            </button>
+            <button class="album-button" data-album-name="Lover">
+                <img class="album-cover" src="Assets/Lover.jpeg" alt="Lover album cover">
+            </button>
+            <button class="album-button" data-album-name="Folklore">
+                <img class="album-cover" src="Assets/Folklore.jpeg" alt="Folklore album cover">
+            </button>
+            <button class="album-button" data-album-name="Evermore">
+                <img class="album-cover" src="Assets/Evermore.jpeg" alt="Evermore album cover">
+            </button>
+            <button class="album-button" data-album-name="Midnights">
+                <img class="album-cover" src="Assets/Midnights.jpeg" alt="Midnights album cover">
+            </button>
+            <button class="album-button" data-album-name="The%20Tortured%20Poets%20Department">
+                <img class="album-cover" src="Assets/Tourtured-Poets.jpeg" alt="The Tortured Poets Department album cover">
+            </button>
+        </div>
+    </main>
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
