--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>API</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica:ital@0;1&display=swap" rel="stylesheet">
+    <title>Taylor Swift (Jennie's Version)</title>
 </head>
 <body>
     <main>
@@ -16,36 +19,47 @@
         <div class="album-grid">
             <button class="album-button" data-album-name="Taylor%20Swift">
                 <img class="album-cover" src="Assets/Debut.jpeg" alt="Taylor Swift debut album cover">
+                <h3 class="album-name">Taylor Swift</h3>
             </button>
             <button class="album-button" data-album-name="Fearless">
                 <img class="album-cover" src="Assets/Fearless.jpeg" alt="Fearless album cover">
+                <h3 class="album-name">Fearless</h3>
             </button>
             <button class="album-button" data-album-name="Speak%20Now">
                 <img class="album-cover" src="Assets/Speak-Now.jpeg" alt="Speak Now album cover">
+                <h3 class="album-name">Speak Now</h3>
             </button>
             <button class="album-button" data-album-name="Red">
                 <img class="album-cover" src="Assets/Red.png" alt="Red album cover">
+                <h3 class="album-name">Red</h3>
             </button>
             <button class="album-button" data-album-name="1989">
                 <img class="album-cover" src="Assets/1989.png" alt="1989 album cover">
+                <h3 class="album-name">1989</h3>
             </button>
             <button class="album-button" data-album-name="Reputation">
                 <img class="album-cover" src="Assets/Reputation.jpeg" alt="Reputation album cover">
+                <h3 class="album-name">Reputation</h3>
             </button>
             <button class="album-button" data-album-name="Lover">
                 <img class="album-cover" src="Assets/Lover.jpeg" alt="Lover album cover">
+                <h3 class="album-name">Lover</h3>
             </button>
             <button class="album-button" data-album-name="Folklore">
                 <img class="album-cover" src="Assets/Folklore.jpeg" alt="Folklore album cover">
+                <h3 class="album-name">Folklore</h3>
             </button>
             <button class="album-button" data-album-name="Evermore">
                 <img class="album-cover" src="Assets/Evermore.jpeg" alt="Evermore album cover">
+                <h3 class="album-name">Evermore</h3>
             </button>
             <button class="album-button" data-album-name="Midnights">
                 <img class="album-cover" src="Assets/Midnights.jpeg" alt="Midnights album cover">
+                <h3 class="album-name">Midnights</h3>
             </button>
             <button class="album-button" data-album-name="The%20Tortured%20Poets%20Department">
                 <img class="album-cover" src="Assets/Tourtured-Poets.jpeg" alt="The Tortured Poets Department album cover">
+                <h3 class="album-name">The Tortured Poets Department</h3>
             </button>
         </div>
     </main>
