Added css animations when the webbsite is re-loaded

--- a/index.html
+++ b/index.html
@@ -7,62 +7,69 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica:ital@0;1&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <title>Taylor Swift (Jennie's Version)</title>
 </head>
 <body>
     <main>
-        <div class="quote-box">
+        <section class="quote-box">
             <h1>Taylor Swift (Jennie's version)</h1>
             <h2 class="quote"></h2>
             <p class="song-title"></p>
-        </div>
-        <div class="album-grid">
+        </section>
+        <section class="album-grid">
             <button class="album-button" data-album-name="Taylor%20Swift">
                 <img class="album-cover" src="Assets/Debut.jpeg" alt="Taylor Swift debut album cover">
-                <h3 class="album-name">Taylor Swift</h3>
+                <span class="album-name">Taylor Swift</span>
             </button>
             <button class="album-button" data-album-name="Fearless">
                 <img class="album-cover" src="Assets/Fearless.jpeg" alt="Fearless album cover">
-                <h3 class="album-name">Fearless</h3>
+                <span class="album-name">Fearless</span>
             </button>
             <button class="album-button" data-album-name="Speak%20Now">
                 <img class="album-cover" src="Assets/Speak-Now.jpeg" alt="Speak Now album cover">
-                <h3 class="album-name">Speak Now</h3>
+                <span class="album-name">Speak Now</span>
             </button>
             <button class="album-button" data-album-name="Red">
                 <img class="album-cover" src="Assets/Red.png" alt="Red album cover">
-                <h3 class="album-name">Red</h3>
+                <span class="album-name">Red</span>
             </button>
             <button class="album-button" data-album-name="1989">
                 <img class="album-cover" src="Assets/1989.png" alt="1989 album cover">
-                <h3 class="album-name">1989</h3>
+                <span class="album-name">1989</span>
             </button>
             <button class="album-button" data-album-name="Reputation">
                 <img class="album-cover" src="Assets/Reputation.jpeg" alt="Reputation album cover">
-                <h3 class="album-name">Reputation</h3>
+                <span class="album-name">Reputation</span>
             </button>
             <button class="album-button" data-album-name="Lover">
                 <img class="album-cover" src="Assets/Lover.jpeg" alt="Lover album cover">
-                <h3 class="album-name">Lover</h3>
+                <span class="album-name">Lover</span>
             </button>
             <button class="album-button" data-album-name="Folklore">
                 <img class="album-cover" src="Assets/Folklore.jpeg" alt="Folklore album cover">
-                <h3 class="album-name">Folklore</h3>
+                <span class="album-name">Folklore</span>
             </button>
             <button class="album-button" data-album-name="Evermore">
                 <img class="album-cover" src="Assets/Evermore.jpeg" alt="Evermore album cover">
-                <h3 class="album-name">Evermore</h3>
+                <span class="album-name">Evermore</span>
             </button>
             <button class="album-button" data-album-name="Midnights">
                 <img class="album-cover" src="Assets/Midnights.jpeg" alt="Midnights album cover">
-                <h3 class="album-name">Midnights</h3>
+                <span class="album-name">Midnights</span>
             </button>
             <button class="album-button" data-album-name="The%20Tortured%20Poets%20Department">
                 <img class="album-cover" src="Assets/Tourtured-Poets.jpeg" alt="The Tortured Poets Department album cover">
-                <h3 class="album-name">The Tortured Poets Department</h3>
+                <span class="album-name">The Tortured Poets Department</span>
             </button>
-        </div>
+        </section>
     </main>
+    <footer>
+        <p>Jennie Westerlunds site for the API assignment in the course Frontend/client-based development 2024.</p>
+    </footer>
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
