Uppdated the README.md

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </section>
     </main>
     <footer>
-        <p>Jennie Westerlunds site for the API assignment in the course Frontend/client-based development 2024.</p>
+        <p>Jennie Westerlunds site for the API assignment in the course frontend/client-based development 2024.</p>
     </footer>
     <script type="text/javascript" src="script.js"></script>
 </body>
